--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -140,7 +140,7 @@
                 {% endif %}
 
 
-                <div if="first-select">
+                <div id="first-select">
                     {{ s1_form.mark }}
                     <span class="form-error">{{ s1_form.mark.errors }}</span>
                 </div>
