при изменении селектов, данные выводятся в соседнюю ячейку

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -154,6 +154,7 @@
                     <table id="require-auto-data-first">
                         <tr>
                             <td>{{ s1_form.model.label }}</td>
+                            <td class="visible-data"></td>
                             <td>
                                 {{ s1_form.model }}
                                 {{ s1_form.model.errors }}
@@ -161,6 +162,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.model_year.label }}</td>
+                            <td class="visible-data"></td>
                             <td>
                                 {{ s1_form.model_year }}
                                 {{ s1_form.model_year.errors }}
