добавлен простенький обработчик события по клику на визуальном значении

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -207,7 +207,14 @@
                                 {{ s1_form.credit.errors }}
                             </td>
                         </tr>
-                        <tr>
+                    </table>
+                </div>
+
+
+
+            <div class="form-round-block" id="optional-block-1">
+                <table>
+                    <tr>
                             <td>{{ s1_form.age.label }}</td>
                             <td>
                                 {{ s1_form.age }}
@@ -221,12 +228,8 @@
                                 {{ s1_form.experience_driving.errors }}
                             </td>
                         </tr>
-                    </table>
-                </div>
-
-
-
-            <div class="form-round-block" id="optional-block-1">
+                </table>
+                
                 <table id="optional-auto-data">
                     <tr id="extrasect">
                         <td><b>Доп. водители (опционально):</b></td>
