добавлена отрисовка содержимого селектов, в первом блоке

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -170,6 +170,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.power.label }}</td>
+                            <td class="visible-data"></td>
                             <td>
                                 {{ s1_form.power }}
                                 {{ s1_form.power.errors }}
@@ -177,8 +178,10 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.price.label }}</td>
-                            <td>
+                            <td class="visible-data">
                                 {{ s1_form.price }}
+                            </td>
+                            <td>
                                 <b id="stoim"></b><br/>
                                 {{ s1_form.price.errors }}
                             </td>
@@ -188,6 +191,7 @@
                     <table id="require-auto-data-second">
                         <tr>
                             <td>{{ s1_form.wheel.label }}</td>
+                            <td class="visible-data"></td>
                             <td>
                                 {{ s1_form.wheel }}
                                 {{ s1_form.wheel.errors }}
@@ -195,6 +199,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.city.label }}</td>
+                            <td class="visible-data"></td>
                             <td>
                                 {{ s1_form.city }}
                                 {{ s1_form.city.errors }}
@@ -202,6 +207,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.credit.label }}</td>
+                            <td class="visible-data"></td>
                             <td>
                                 {{ s1_form.credit }}
                                 {{ s1_form.credit.errors }}
