добавлена обратная связь между выбранным значением селекта и визуальным отображением

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2235,7 +2235,7 @@ div.messages li {
     padding-bottom: 15px;
 }
 
-#calc-tabs .form-round-block table td.visible-data{
+#calc-tabs .form-round-block table td.second{
     padding-left: 20px;
 }
 
