--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -154,7 +154,7 @@
                     <table id="require-auto-data-first">
                         <tr>
                             <td>{{ s1_form.model.label }}</td>
-                            <td class="visible-data"></td>
+                            <td class="visible-data second"></td>
                             <td class="ajax-select">
                                 {{ s1_form.model }}
                                 {{ s1_form.model.errors }}
@@ -162,7 +162,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.model_year.label }}</td>
-                            <td class="visible-data"></td>
+                            <td class="visible-data second"></td>
                             <td class="ajax-select">
                                 {{ s1_form.model_year }}
                                 {{ s1_form.model_year.errors }}
@@ -170,7 +170,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.power.label }}</td>
-                            <td class="visible-data"></td>
+                            <td class="visible-data second"></td>
                             <td class="ajax-select">
                                 {{ s1_form.power }}
                                 {{ s1_form.power.errors }}
@@ -178,7 +178,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.price.label }}</td>
-                            <td class="visible-data">
+                            <td class="second">
                                 {{ s1_form.price }}
                                 <span id="stoim"></span>
                                 {{ s1_form.price.errors }}
@@ -188,7 +188,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.wheel.label }}</td>
-                            <td class="visible-data"></td>
+                            <td class="visible-data second"></td>
                             <td>
                                 {{ s1_form.wheel }}
                                 {{ s1_form.wheel.errors }}
@@ -196,7 +196,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.city.label }}</td>
-                            <td class="visible-data"></td>
+                            <td class="visible-data second"></td>
                             <td>
                                 {{ s1_form.city }}
                                 {{ s1_form.city.errors }}
@@ -204,7 +204,7 @@
                         </tr>
                         <tr>
                             <td>{{ s1_form.credit.label }}</td>
-                            <td class="visible-data">
+                            <td class="visible-data second">
                                 {{ s1_form.credit }} {{ s1_form.credit.errors }}
                             </td>
                             <td>
