--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -180,6 +180,7 @@
                             <td>{{ s1_form.price.label }}</td>
                             <td class="second">
                                 {{ s1_form.price }}
+                                <div id="price-slider"></div>
                                 <span id="stoim"></span>
                                 {{ s1_form.price.errors }}
                             </td>
