по кнопке "добавить водителя" поочердено добавляются строки с доп. данными

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -237,7 +237,7 @@
                             </td>
                         </tr>
 
-                        <tr>
+                        <tr class="hide">
                             <td class="label">
                                    {{ s1_form.age1.label }}
                                     <small>(полных лет)</small>
@@ -256,7 +256,7 @@
                             </td>
                         </tr>
 
-                        <tr>
+                        <tr class="hide">
                             <td class="label">
                                    {{ s1_form.age2.label }}
                                     <small>(полных лет)</small>
@@ -275,7 +275,7 @@
                             </td>
                         </tr>
 
-                        <tr>
+                        <tr class="hide">
                             <td class="label">
                                    {{ s1_form.age3.label }}
                                     <small>(полных лет)</small>
