--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -140,7 +140,8 @@
                 {% endif %}
 
 
-                <div id="first-select">
+                <div id="first-select" class="long-select">
+                    <span class="select-text"></span>
                     {{ s1_form.mark }}
                     <span class="form-error">{{ s1_form.mark.errors }}</span>
                 </div>
